--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/18/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.6&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.6&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.6&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.2&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.861 inHg (-0.072)</td>
+        <td class="data">29.861 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">7 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="02:47:01 PM">
-            29.860</span>
+          <span title="02:51:01 PM">
+            29.859</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          354
+          353
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:46:01 PM">
-            78.8</span><br/>
+          <span title="02:51:01 PM">
+            78.9</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 0 hours, 2 minutes</td>
+      <td class="data">17 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 0 hours, 2 minutes</td>
+      <td class="data">17 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
