--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 02:54:00 PM</p>
+    <p class="lastupdate">09/18/2020 02:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">87.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">87.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">87.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.0&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.861 inHg (-0.074)</td>
+        <td class="data">29.855 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph SSE (158&#176;)</td>
+        <td class="data">7 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.8&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="02:51:01 PM">
-            29.859</span>
+          <span title="02:58:01 PM">
+            29.855</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:51:01 PM">
-            78.9</span><br/>
+          <span title="02:57:01 PM">
+            79.0</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 0 hours, 7 minutes</td>
+      <td class="data">17 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 0 hours, 7 minutes</td>
+      <td class="data">17 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
