--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 02:59:00 PM</p>
+    <p class="lastupdate">09/18/2020 03:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.3&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.855 inHg (-0.074)</td>
+        <td class="data">29.855 inHg (-0.073)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">6 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.9&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="02:58:01 PM">
-            29.855</span>
+          <span title="03:01:01 PM">
+            29.854</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          217
+          216
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 0 hours, 12 minutes</td>
+      <td class="data">17 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 0 hours, 12 minutes</td>
+      <td class="data">17 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
