--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:24:00 PM</p>
+    <p class="lastupdate">09/18/2020 03:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">27%</td>
+        <td class="data">26%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.852 inHg (-0.068)</td>
+        <td class="data">29.849 inHg (-0.068)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph S (180&#176;)</td>
+        <td class="data">8 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.5&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="09:54:31 AM">
             57.4</span><br/>
-          <span title="03:23:00 PM">
-            49.9</span>
+          <span title="03:28:59 PM">
+            49.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:54:31 AM (Friday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="03:16:01 PM">
-            29.849</span>
+          <span title="03:26:01 PM">
+            29.848</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:23:01 PM">
-            79.5</span><br/>
+          <span title="03:27:01 PM">
+            79.6</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 0 hours, 37 minutes</td>
+      <td class="data">17 days, 0 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 0 hours, 37 minutes</td>
+      <td class="data">17 days, 0 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
