--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:39:00 PM</p>
+    <p class="lastupdate">09/18/2020 03:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.5&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.848 inHg (-0.066)</td>
+        <td class="data">29.846 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SSE (158&#176;)</td>
+        <td class="data">10 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
     </tbody>
   </table>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:11:31 PM">
-            17</span><br/>
-          207
+          <span title="03:40:21 PM">
+            20</span><br/>
+          210
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:35:01 PM">
-            79.7</span><br/>
+          <span title="03:39:01 PM">
+            79.8</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="07:46:01 AM">
             50</span><br/>
-          <span title="03:13:01 PM">
-            42</span>
+          <span title="03:39:01 PM">
+            41</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:46:01 AM (Friday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 0 hours, 52 minutes</td>
+      <td class="data">17 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 0 hours, 52 minutes</td>
+      <td class="data">17 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
